--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Schedule</a>
+              <a class="nav-link" href="#schedule">Schedule</a>
           </li>
         </ul>
       </div>
@@ -49,7 +49,7 @@
       </div>
     </header>
 
-    <div class="about section">
+    <div class="about section" id="about">
       <div class="container ">
         <div class="row mx-1 mx-md-0">
           <div class="text-content">
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div class="schedule section">
+    <div class="schedule section" id="schedule">
       <div class="container">
           <div class="text-content">
             <h2 class="">Church Service</h2>
