changed links color

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>The mandates of the church align with soul winning, following up, 
               crusades, helping people, raising pastors and growing the church.
             </p>
-            <a href="#" class="btn w-sm-100">View Service Times</a>
+            <a href="#schedule" class="btn w-sm-100">View Service Times</a>
           </div>
 
           <div class="featured-image">
