--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a href="#" class="btn-sec">Continue reading &rarr;</a>
           </div>
           <div class="side-image">
-            <img src="img/rev-cuts-removebg-preview.png" alt="minister's image">
+            <img src="img/rev-new.png" alt="minister's image">
           </div>
         </div>
       </div>
