--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="International Ultimate Ministries (IUM) was established on the doctrines of Jesus Christ and believes strongly in soul winning. Checkout our service times">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Internation Ultimate Ministries, ium">
+
+    <!-- open graph -->
+    <meta property="og:type" content="landing page">
+    <meta property="og:title" content="IUM: Reaching Your Ultimate Through Christ">
+    <meta property="og:description" content="International Ultimate Ministries (IUM) was established on the doctrines of Jesus Christ and believes strongly in soul winning. Checkout our service times">
+    <meta property="og:image" content="img/rev-new.png">
+    <!-- <meta property="og:url" content="#"> -->
+    <meta property="og:site_name" content="International Ultimate Ministries website">
+
+
     <title>IUM: Reaching Your Ultimate Through Christ</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
