--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="landing page">
     <meta property="og:title" content="IUM: Reaching Your Ultimate Through Christ">
     <meta property="og:description" content="International Ultimate Ministries (IUM) was established on the doctrines of Jesus Christ and believes strongly in soul winning. Checkout our service times">
-    <meta property="og:image" content="https://ium.netlify.app/img/rev-new.png">
+    <meta property="og:image" content="https://ium.netlify.app/img/rev-new-sqaure.png">
     <meta property="og:url" content="https://ium.netlify.app">
     <meta property="og:site_name" content="International Ultimate Ministries website">
 
