added actual social links

--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item active pl-sm-3">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pl-sm-3">
             <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#schedule">Schedule</a>
+          <li class="nav-item pl-sm-3">
+              <a class="nav-link" href="#">Books</a>
           </li>
+          <li class="nav-item pl-sm-3">
+            <a class="nav-link" href="#schedule">Schedule</a>
+        </li>
         </ul>
       </div>
     </nav>
@@ -188,9 +191,9 @@
       <div class="group social">
         <h3>Follow Us</h3>
           <ul>
-              <li><a href="https://web.facebook.com/"><img src="./img/social/fb.svg" alt="facebook"></a></li>
-              <li><a href="https://twitter.com/"><img src="./img/social/tw.svg" alt="twitter"></a></li>
-              <li><a href="https://www.instagram.com/"><img src="./img/social/ig.svg" alt="instagram"></a></li>
+              <li><a href="https://www.facebook.com/International-Ultimate-Ministries-778879268858457"><img src="./img/social/fb.svg" alt="facebook"></a></li>
+              <li><a href="https://twitter.com/Interna15974696"><img src="./img/social/tw.svg" alt="twitter"></a></li>
+              <li><a href="https://www.instagram.com/int.ultimateministries/"><img src="./img/social/ig.svg" alt="instagram"></a></li>
               <li><a href="https://www.youtube.com/"><img src="./img/social/yt.svg" alt="youtube"></a></li>
           </ul>
       </div>
