--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active pl-sm-3">
+          <li class="nav-item active pl-3 pl-md-0">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item pl-sm-3">
+          <li class="nav-item pl-3 pl-md-0">
             <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item pl-sm-3">
+          <li class="nav-item pl-3 pl-md-0">
               <a class="nav-link" href="#">Books</a>
           </li>
-          <li class="nav-item pl-sm-3">
+          <li class="nav-item pl-3 pl-md-0">
             <a class="nav-link" href="#schedule">Schedule</a>
         </li>
         </ul>
