--- a/index.html
+++ b/index.html
@@ -115,6 +115,25 @@
       </div>
     </div>
 
+    <div class="messages section">
+      <div class="container">
+        <h2>Messages</h2>
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="card">
+              <img src="img/Podcast Template 3.jpg" alt="podcast">
+              <div class="text-content">
+                Listen to the word of God and gain Biblical insights with these recorded audio messages.
+
+                <a href="#" class="btn-sec">Go to messages &rarr;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6"></div>
+        </div>
+      </div>
+    </div>
+
     <div class="schedule section" id="schedule">
       <div class="container">
           <div class="text-content">
