added podcast link

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             <div class="card">
               <img src="img/Podcast Template 3.jpg" alt="podcast">
               <div class="text-content">
-                Listen to the word of God and gain Biblical insights with these recorded audio messages.
+                The best transformation that can come your way is transformation through the word of God.
 
-                <a href="#" class="btn-sec">Go to messages &rarr;</a>
+                <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to podcast &rarr;</a>
               </div>
             </div>
           </div>
