curved out buttons

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
             <div class="card">
               <img src="img/Podcast Template 3.jpg" alt="podcast">
               <div class="text-content">
-                The best transformation that can come your way is transformation through the word of God.
+                <h3>Audio</h3>
+                <p>The best transformation that can come your way is transformation through the word of God.</p>
 
                 <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to podcast &rarr;</a>
               </div>
