moved message text under heading

--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
     <div class="messages section">
       <div class="container">
         <h2>Messages</h2>
+        <p>The best transformation that can come your way is transformation through the word of God.</p>
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="card">
               <img src="img/Podcast Template 3.jpg" alt="podcast">
               <div class="text-content">
-                <h3>Audio</h3>
-                <p>The best transformation that can come your way is transformation through the word of God.</p>
+                <!-- <h3>Audio</h3> -->
+                <!-- <p>Listen to Audio.</p> -->
 
                 <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to podcast &rarr;</a>
               </div>
