--- a/index.html
+++ b/index.html
@@ -120,18 +120,27 @@
         <h2>Messages</h2>
         <p>The best transformation that can come your way is transformation through the word of God.</p>
         <div class="row">
+
           <div class="col-12 col-md-6">
             <div class="card">
               <img src="img/Podcast Template 3.jpg" alt="podcast">
               <div class="text-content">
                 <!-- <h3>Audio</h3> -->
                 <!-- <p>Listen to Audio.</p> -->
-
                 <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to podcast &rarr;</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6"></div>
+
+          <div class="col-12 col-md-6">
+            <div class="card">
+              <iframe src="https://www.youtube.com/embed/xYAMEPxJUQY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="text-content">
+                <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to Channel &rarr;</a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
