changed message card btns

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="text-content">
                 <!-- <h3>Audio</h3> -->
                 <!-- <p>Listen to Audio.</p> -->
-                <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to podcast &rarr;</a>
+                <a href="https://alexkwablahamegatse.podbean.com/" class="btn">Go to podcast &rarr;</a>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
             <div class="card">
               <iframe src="https://www.youtube.com/embed/xYAMEPxJUQY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="text-content">
-                <a href="https://alexkwablahamegatse.podbean.com/" class="btn-sec">Go to Channel &rarr;</a>
+                <a href="https://alexkwablahamegatse.podbean.com/" class="btn">Go to Channel &rarr;</a>
               </div>
             </div>
           </div>
