--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="card">
               <iframe src="https://www.youtube.com/embed/xYAMEPxJUQY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="text-content">
-                <a href="https://alexkwablahamegatse.podbean.com/" class="btn">Go to Channel &rarr;</a>
+                <a href="https://www.youtube.com/channel/UCO9KkDXDpRGC4qYKPMJRrag" class="btn">Go to Channel &rarr;</a>
               </div>
             </div>
           </div>
