--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <li><a href="https://www.facebook.com/International-Ultimate-Ministries-778879268858457"><img src="./img/social/fb.svg" alt="facebook"></a></li>
               <li><a href="https://twitter.com/Interna15974696"><img src="./img/social/tw.svg" alt="twitter"></a></li>
               <li><a href="https://www.instagram.com/int.ultimateministries/"><img src="./img/social/ig.svg" alt="instagram"></a></li>
-              <li><a href="https://www.youtube.com/"><img src="./img/social/yt.svg" alt="youtube"></a></li>
+              <li><a href="https://www.youtube.com/channel/UCO9KkDXDpRGC4qYKPMJRrag"><img src="./img/social/yt.svg" alt="youtube"></a></li>
           </ul>
       </div>
     </footer>
