added about and soul winning pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Internation Ultimate Ministries, ium">
 
     <!-- open graph -->
-    <meta property="og:type" content="landing page">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="IUM: Reaching Your Ultimate Through Christ">
     <meta property="og:description" content="International Ultimate Ministries (IUM) was established on the doctrines of Jesus Christ and believes strongly in soul winning. Checkout our service times">
     <meta property="og:image" content="https://ium.netlify.app/img/rev-new-square.png">
@@ -38,13 +38,16 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item pl-3 pl-md-0">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item pl-3 pl-md-0">
-              <a class="nav-link" href="#">Books</a>
+            <a class="nav-link" href="soulwinning.html">Soul Winning</a>
           </li>
           <li class="nav-item pl-3 pl-md-0">
-            <a class="nav-link" href="#schedule">Schedule</a>
+              <a class="nav-link" href="books.html">Books</a>
+          </li>
+          <li class="nav-item pl-3 pl-md-0">
+            <a class="nav-link" href="index.html#schedule">Schedule</a>
         </li>
         </ul>
       </div>
@@ -83,7 +86,7 @@
               <div class="spacer"></div>
               Nonetheless, the church believes it is called for a particular 
               mandate and these...</p>
-              <a href="#" class="btn-sec">Continue reading &rarr;</a>
+              <a href="about.html" class="btn-sec">Continue reading &rarr;</a>
           </div>
           <div class="side-image">
             <img src="img/rev-new.png" alt="minister's image">
@@ -106,7 +109,7 @@
               scriptures explain that His mission or purpose was to save 
               life and give it eternal life in heaven. Hence if the mission of 
               Christ was to save mankind and the... </p>
-              <a href="#" class="btn-sec">Continue reading &rarr;</a>
+              <a href="soulwinning.html" class="btn-sec">Continue reading &rarr;</a>
           </div>
           <div class="side-image">
             <img src="img/soul-winning2.png" alt="minister's image">
@@ -210,13 +213,19 @@
         <h3>Quick links</h3>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="#">Podcast</a>
+            <a href="soulwinning.html">Soul winning</a>
+          </li>
+          <li>
+            <a href="books.html">Books</a>
+          </li>
+          <li>
+            <a href="https://alexkwablahamegatse.podbean.com/">Podcast</a>
           </li>
         </ul>
       </div>
