--- a/books.html
+++ b/books.html
@@ -56,9 +56,33 @@
         <div class="container">
             <article>
                 <h1>Books</h1>
-                <p>
-                    Coming Soon!
-                </p>
+                <div class="underline"></div>
+                <article>
+                    <div class="row">
+                        <div class="col-lg-4 img-container">
+                            <figure><img src="img/life-partner.png" alt=""></figure>
+                        </div>
+                        <div class="col-lg-8 mt-4 mt-lg-0">
+                            <div class="details">
+                                <b class="book-title">My Life Partner</b><br>
+                                <small>by Rev. Alex K. Amegatse</small>
+                                <p class="intro">
+                                    I can best introduce this book by explaining
+                                    what it is not. First of all, it is not a book of
+                                    mere theology. It does not deal with truth
+                                    in the abstract. On the contrary, it is rooted
+                                    directly and firmly in God’s word and real
+                                    life practical experiences as living proofs
+                                    of God’s word. It offers sound counsel that
+                                    shows you how to find, follow and fulfill your
+                                    destiny in God’s eternal plan of a suitable
+                                    mate for you.
+                                </p>
+                                <a href="https://doc-0g-5k-docs.googleusercontent.com/docs/securesc/f9l0r29jm72uvnjqqk79qkvfod9dv6je/0dkdamg1n6d79ioi9jq3iaenumh7npuq/1601649825000/08655589280723083297/05519052607117043280/1OLv-Kas9Y5PuUNqch4umHDjA3eyWRYyH?e=download&authuser=0&nonce=4reamrd039u4k&user=05519052607117043280&hash=c0opl935411376nlc6qqu9oh209u87lt" class="btn-sec">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </article>
         </div>
     </main>
