--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <a href="soulwinning.html" class="btn-sec">Continue reading &rarr;</a>
           </div>
           <div class="side-image">
-            <img src="img/soul-winning2.png" alt="minister's image">
+            <img src="img/soul-winning.png" alt="minister's image">
           </div>
         </div>
       </div>
