--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   
             <!-- <div class="col-12 col-md-6"> -->
               <div class="card mx-3 mx-md-0 mt-md-3 mr-lg-auto">
-                <iframe src="https://www.youtube.com/embed/xYAMEPxJUQY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/xYAMEPxJUQY?rel=0&showinfo=0&autohide=1″ frameborder=”0″" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-content">
                   <a href="https://www.youtube.com/channel/UCO9KkDXDpRGC4qYKPMJRrag" class="btn-sec">Go to Channel &rarr;</a>
                 </div>
