--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h2 class="">Church Service</h2>
             <div class="row">
 
-              <div class="col-12 col-md-6 pr-md-4">
+              <div class="col-12 col-md-6 pr-5 pr-md-4 pr-lg-5">
                 <div class="info">
                   <h3>Sunday Service</h3>
                   <p>
@@ -193,7 +193,7 @@
 
               </div>
 
-              <div class="col-12 col-md-6 pl-md-3">
+              <div class="col-12 col-md-6 pr-5 pl-md-4 pl-lg-5">
                 <div class="info">
                   <h3>Tithe, Communion 
                     &Thanksgiving Sunday</h3>
